--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Static
+staticfiles
+
 # Visual Code
 *.code-workspace
 .vscode/
@@ -62,8 +65,8 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
-db.sqlite3-journal
+# db.sqlite3
+# db.sqlite3-journal
 
 # Flask stuff:
 instance/
